--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -60,7 +60,7 @@
 <div id="fullpage" class="fullpage-wrapper fp-easing" style="height: 100%; position: relative; -webkit-transform: translate3d(0px, -1956px, 0px); transform: translate3d(0px, -1956px, 0px);">
 
 	<div class="section fp-section fp-table" id="section0" data-anchor="firstPage" style="height: 652px; background-color: rgb(27, 188, 155);"><div class="fp-tableCell" style="height: 652px;">
-		<h1>fullPage.js</h1>
+		<h1>This is my test!!!!</h1>
 		<h2>Create Beautiful Fullscreen Scrolling Websites</h2>
 		<div id="download"><a href="https://github.com/alvarotrigo/fullpage.js/archive/master.zip">Download</a></div><br>
 		<img src="/img/fullPage.png" alt="fullPage" height="243" width="282">
