--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -2,7 +2,7 @@
 <!-- saved from url=(0040)http://alvarotrigo.com/fullPage/#4thpage -->
 <html xmlns="http://www.w3.org/1999/xhtml" style="overflow: hidden; height: 100%;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
-	<title>fullPage.js One Page Scroll Site Plugin</title>
+	<title>J-TEST</title>
 	<meta name="author" content="Alvaro Trigo Lopez">
 	<meta name="description" content="fullPage plugin by Alvaro Trigo. Create fullscreen pages fast and simple. One page scroll jquery plugin like iPhone 5 website.">
 	<meta name="keywords" content="fullpage,jquery,alvaro,trigo,plugin,fullscren,screen,full,iphone5,apple">
