--- a/application/views/scripts/index/tasklist.phtml
+++ b/application/views/scripts/index/tasklist.phtml
@@ -22,12 +22,13 @@
 		  -o-background-size: cover;
 		  background-size: cover;
 		}
+		.resovled{color: gray;}
 		</style>
 	</head>
 	<body>
 		<div style="width: 70%; margin: auto; height: 800px; overflow: scroll; line-height: 100px; font-size: 30px;  font-weight: 500;font-family: 'MuseoSans_Fat'; color: rgba(255,255,255,0.75);">
 			<ul>
-				<li>
+				<li class='resovled'>
 					1. Set up route for zend.
 				</li>
 				<li>
@@ -36,10 +37,10 @@
 				<li>
 					3. Set up DB(RDS) via AWS.
 				</li>
-				<li>
+				<li class='resovled'>
 					4. Set up local DB connect.
 				</li>
-				<li>
+				<li class='resovled'>
 					5. Set up app.ini.
 				</li>
 				<li>
