disable mobiel banner.

--- a/application/views/scripts/index/main.phtml
+++ b/application/views/scripts/index/main.phtml
@@ -51,7 +51,7 @@
     </nav>
   </header>
 
-  <div class="mobileNavWrapper">
+  <!-- <div class="mobileNavWrapper">
     <nav class="navi">
       <ul>
         <li><a href="/">Work</a></li>
@@ -61,7 +61,7 @@
         <li><a href="/" class="js_showSearch js_hideMobileNav"><i class="icon icon-search"></i></a></li>
       </ul>
     </nav>
-  </div>
+  </div> -->
 
   <section class="welcomeWrapper">
     <figure style="background-image: url(/img/cute_profile.png);">
