--- a/application/views/scripts/index/main.phtml
+++ b/application/views/scripts/index/main.phtml
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0025)http://davidhellmann.com/ -->
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,11 +6,6 @@
 	<title>Jun Wang — Designer. Developer.</title><meta name="keywords" content=" Designer, Developer, Webdesign, Screendesign, HTML, CSS, WordPress, Portfolio, Sass">
   <meta name="description" content="This is the portfolio, blog and digital playground from Jun Wang.">
   <meta name="author" content="Jun Wang - http://www.webdesignerjun.com">
-
-  <!-- <link rel="shortcut icon" href="http://davidhellmann.com/wordpress/wp-content/themes/flatman/assets/img/favicon.ico" type="image/x-icon"> -->
-  <!-- <link rel="icon" href="http://davidhellmann.com/wordpress/wp-content/themes/flatman/assets/img/favicon.png" type="image/png"> -->
-  <!-- <link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://davidhellmann.com/wordpress/wp-content/themes/flatman/assets/img/favicon-152.png"> -->
-  <!-- <link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://davidhellmann.com/wordpress/wp-content/themes/flatman/assets/img/favicon-120.png"> -->
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0,maximum-scale=1.0">
 
 	<link rel="stylesheet" href="css/mainPage/style.css" type="text/css" media="screen">
@@ -121,7 +115,7 @@
         </a>
       </li>
             </ul>
-    <a class="getMoreButton" href="http://davidhellmann.com/blog">More Articles</a>
+    <a class="getMoreButton" href="/">More Articles</a>
   </section>
 
 <section class="myWork" id="work">
@@ -143,7 +137,7 @@
         </figure>
       </div>
       <div class="content">
-        <h2>TWeekaboo</h2>
+        <h2>Tweekaboo</h2>
         <p>
           An online Journal / Diary App for modern parents, Tweekaboo makes it easy to record your pregnancy and baby's firsts and milestones. Share photos & videos ...      </p>
         <div class="colors">
@@ -157,7 +151,7 @@
 
         <ul class="range">
           <li>AWS </li><li>PHP Backend Developement</li><li>Frontend Development</li>        </ul>
-        <a class="getMoreButton" href="http://davidhellmann.com/work/home-on-earth/" title="Home on Earth">View details</a>
+        <a class="getMoreButton" href="https://www.tweekaboo.com" title="Home on Earth">View details</a>
       </div>
     </div>
   </section>
@@ -177,7 +171,7 @@
         </a>
       </li>
                    <li style="height: 502px;">
-        <a href="http://davidhellmann.com/work/makebetterwebsites/">
+        <a href="/">
           <h2>PHP ZEND</h2>
           <figure>
             <div class="zend">
@@ -187,7 +181,7 @@
         </a>
       </li>
                    <li style="height: 502px;">
-        <a href="http://davidhellmann.com/work/betterdoc/">
+        <a href="/">
           <h2>HTML 5</h2>
           <figure>
             <div class="html5">
@@ -197,7 +191,7 @@
         </a>
       </li>
                    <li style="height: 502px;">
-        <a href="http://davidhellmann.com/work/deutsches-obst-und-gemuese/">
+        <a href="/">
           <h2>Javascript</h2>
           <figure>
             <div class="js">
@@ -207,7 +201,7 @@
         </a>
       </li>
           </ul>
-    <a class="getMoreButton" href="http://davidhellmann.com/work">See all my Work</a>
+    <a class="getMoreButton" href="/">See all my Work</a>
   </section>
 
 </section>
@@ -233,9 +227,9 @@
       <a href="/">Jun Wang</a>
     </h1>
     <ul class="prim">
-      <li><a href="http://davidhellmann.com/work">Work</a></li>
-      <li><a href="http://davidhellmann.com/blog">Blog</a></li>
-      <li><a href="http://davidhellmann.com/about">About</a></li>
+      <li><a href="/">Work</a></li>
+      <li><a href="/">Blog</a></li>
+      <li><a href="/">About</a></li>
     </ul>
     <ul class="sec">
       <li><a href="mailto:junwang6302@gmail.com" class="js_showContact"><i class="icon icon-bubbles"></i></a></li>
