--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta charset="utf-8">
 	<title>Jun Wang — Designer. Developer.</title><meta name="keywords" content=" Designer, Developer, Webdesign, Screendesign, HTML, CSS, WordPress, Portfolio, Sass">
-  <meta name="description" content="This is the portfolio, blog and digital playground from Jun Wang.">
-  <meta name="author" content="Jun Wang - http://www.webdesignerjun.com">
+	<meta name="description" content="This is the portfolio, blog and digital playground from Jun Wang.">
+	<meta name="author" content="Jun Wang - http://www.webdesignerjun.com">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0,maximum-scale=1.0">
-
+	<link rel="shortcut icon" href="/img/logo.png" type="image/x-icon" />
 	<link rel="stylesheet" href="css/mainPage/style.css" type="text/css" media="screen">
-  <script type="text/javascript" src="/js/lib/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/lib/jquery.min.js"></script>
 
 </head>
 
