import flat ui lib.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -8,6 +8,7 @@
 	<meta name="author" content="Jun Wang - http://www.webdesignerjun.com">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0,maximum-scale=1.0">
 	<link rel="shortcut icon" href="/img/logo.png" type="image/x-icon" />
+	<link rel="stylesheet" href="css/lib/flat-ui.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/mainPage/style.css" type="text/css" media="screen">
 	<script type="text/javascript" src="/js/lib/jquery.min.js"></script>
 
@@ -36,8 +37,15 @@
         <li><a href="/">About</a></li>
       </ul>
       <ul class="sec">
-        <li><a href="mailto:junwang6302@gmail.com" class="js_showContact"><i class="icon icon-bubbles"></i></a></li>
-        <li><a href="/" class="js_showSearch"><i class="icon icon-search"></i></a></li>
+        <li>
+        	<a href="mailto:junwang6302@gmail.com" class="js_showContact">
+        		<img class="mail" src="img/icons/svg/mail.svg" alt="Mail">
+        	</a>
+        </li>
+        <li><a href="/" class="js_showSearch">
+        	<!-- <i class="icon icon-search fui-search"></i> -->
+        	<span class="fui-search"></span>
+        </a></li>
       </ul>
       <ul class="mobile">
         <li><a href="/" class="js_showMobileNav"><i class="icon icon-menu"></i></a></li>
@@ -65,7 +73,7 @@
       </figcaption>
     </figure>
     <a href="/" class="scrollDown" id="article">
-      <i class="icon icon-arrow-bottom"></i>Read my Articles
+      <i class="icon"><span class="fui-triangle-down down-arrow"></span></i>Read my Articles
     </a>
   </section>
 
@@ -76,42 +84,42 @@
         <a href="/" rel="bookmark" title=" Ray-Ban Polarized Tour 2014 — #iampolarized  #polarizedtour2014">
           <span class="date">30, June 2014</span>
           <h2>xxxx xxxxx xxxx xxxx xxxxx</h2>
-          <div class="readMore">Read Article<i class="icon icon-arrow-right"></i></div>
+          <div class="readMore">Read Article<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
           <li style="height: 474px;">
         <a href="/" rel="bookmark" title=" CSS Media Queries: Das Problem mit fixen Breakpoints">
           <span class="date">19, May 2014</span>
           <h2>xxxx xxxxx xxxx xxxx xxxxx</h2>
-          <div class="readMore">Read Article<i class="icon icon-arrow-right"></i></div>
+          <div class="readMore">Read Article<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
           <li style="height: 474px;">
         <a href="/" rel="bookmark" title=" #changeCGN — Minirampe gegen hässliches Köln!">
           <span class="date">18, May 2014</span>
           <h2>xxxx xxxxx xxxx xxxx xxxxx</h2>
-          <div class="readMore">Read Article<i class="icon icon-arrow-right"></i></div>
+          <div class="readMore">Read Article<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
           <li style="height: 434px;">
         <a href="/" title=" dribbble invites zu vergeben!">
           <span class="date">12, May 2014</span>
           <h2>xxxx xxxxx xxxx xxxx xxxxx</h2>
-          <div class="readMore">Read Article<i class="icon icon-arrow-right"></i></div>
+          <div class="readMore">Read Article<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
           <li style="height: 434px;">
         <a href="/" title=" AWWWARDS — Honorable Mention">
           <span class="date">12, May 2014</span>
           <h2>xxxx xxxxx xxxx xxxx xxxxx</h2>
-          <div class="readMore">Read Article<i class="icon icon-arrow-right"></i></div>
+          <div class="readMore">Read Article<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
           <li style="height: 434px;">
         <a href="/" title=" Peak! Vote for me on AWWWARDS">
           <span class="date">08, May 2014</span>
           <h2>xxxx xxxxx xxxx xxxx xxxxx</h2>
-          <div class="readMore">Read Article<i class="icon icon-arrow-right"></i></div>
+          <div class="readMore">Read Article<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
             </ul>
@@ -120,7 +128,7 @@
 
 <section class="myWork" id="work">
   <a href="/" class="scrollDown">
-    <i class="icon icon-arrow-bottom"></i>See my work
+    <i class="icon"><span class="fui-triangle-down down-arrow"></span></i>See my work
   </a>
 
   
@@ -167,7 +175,7 @@
             <div class="aws">
             </div>
           </figure>
-          <div class="readMore">View details<i class="icon icon-arrow-right"></i></div>
+          <div class="readMore">View details<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
                    <li style="height: 502px;">
@@ -177,7 +185,7 @@
             <div class="zend">
             </div>
           </figure>
-          <div class="readMore">View details<i class="icon icon-arrow-right"></i></div>
+          <div class="readMore">View details<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
                    <li style="height: 502px;">
@@ -187,7 +195,7 @@
             <div class="html5">
             </div>
           </figure>
-          <div class="readMore">View details<i class="icon icon-arrow-right"></i></div>
+          <div class="readMore">View details<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
                    <li style="height: 502px;">
@@ -197,7 +205,7 @@
             <div class="js">
             </div>
           </figure>
-          <div class="readMore">View details<i class="icon icon-arrow-right"></i></div>
+          <div class="readMore">View details<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
           </ul>
@@ -232,8 +240,16 @@
       <li><a href="/">About</a></li>
     </ul>
     <ul class="sec">
-      <li><a href="mailto:junwang6302@gmail.com" class="js_showContact"><i class="icon icon-bubbles"></i></a></li>
-      <li><a href="/" class="js_showSearch"><i class="icon icon-search"></i></a></li>
+      <li>
+      	<a href="mailto:junwang6302@gmail.com" class="js_showContact">
+      		<img class="mail" src="img/icons/svg/mail.svg" alt="Mail">
+      	</a>
+      </li>
+      <li>
+      	<a href="/" class="js_showSearch">
+      		<span class="fui-search"></span>
+      	</a>
+      </li>
     </ul>
     <ul class="mobile">
       <li><a href="/" class="js_showMobileNav"><i class="icon icon-menu"></i></a></li>
