--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -48,7 +48,7 @@
         </a></li>
       </ul>
       <ul class="mobile">
-        <li><a href="/" class="js_showMobileNav"><i class="icon icon-menu"></i></a></li>
+        <li><a href="/" class="js_showMobileNav"><i class="icon"><span class="fui-list"></span></i></a></li>
       </ul>
     </nav>
   </header>
