enable mobile menu.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -53,17 +53,17 @@
     </nav>
   </header>
 
-  <!-- <div class="mobileNavWrapper">
+  <div class="mobileNavWrapper">
     <nav class="navi">
       <ul>
         <li><a href="/">Work</a></li>
         <li><a href="/">Blog</a></li>
         <li><a href="/">About</a></li>
         <li><a href="mailto:junwang6302@gmail.com" class="js_showContact"><i class="icon icon-bubbles"></i></a></li>
-        <li><a href="/" class="js_showSearch js_hideMobileNav"><i class="icon icon-search"></i></a></li>
+        <li><a href="/" class="js_showSearch js_hideMobileNav"><i class="icon"></i></a></li>
       </ul>
     </nav>
-  </div> -->
+  </div>
 
   <section class="welcomeWrapper">
     <figure style="background-image: url(/img/cute_profile.png);">
