hide mobile menu for now.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -53,7 +53,7 @@
     </nav>
   </header>
 
-  <div class="mobileNavWrapper">
+  <!-- <div class="mobileNavWrapper">
     <nav class="navi">
       <ul>
         <li><a href="/">Work</a></li>
@@ -63,7 +63,7 @@
         <li><a href="/" class="js_showSearch js_hideMobileNav"><i class="icon"></i></a></li>
       </ul>
     </nav>
-  </div>
+  </div> -->
 
   <section class="welcomeWrapper">
     <figure style="background-image: url(/img/cute_profile.png);">
